2009-02-26  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendsftp.c (try_make_symlink):
	Fix order of SSH_FXP_SYMLINK arguments. It seems
	openssh is not following the docs here.

2009-02-24  Paolo Borelli  <pborelli@katamail.com>

	* test/benchmark-posix-small-files.c:
	* test/benchmark-posix-big-files.c:
	* daemon/trashlib/dirwatch.c:
	* daemon/gvfsbackendsmbbrowse.c:
	* client/gvfsfusedaemon.c:
	Always use g_strerror

2009-02-24  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	(ftp_connection_ensure_data_connection_pasv):
	remove unused variable

2009-02-24  Benjamin Otte  <otte@gnome.org>

	Bug 525283 - handle short reads in ftp

	* daemon/gvfsbackendftp.c: (ftp_connection_receive):
	fix usage of n_bytes variable that changed meaning with the last ftp
	fixes.
	Spotted by Filippo Argiolas <filippo.argiolas@gmail.com>

2009-02-22  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	fix typo in my name (thx Wouter)

2009-02-20  David Zeuthen  <davidz@redhat.com>

	Make the gphoto2 backend work with buggy devices (such as the
	iPhone) where the basedir of the store changes.

	* daemon/gvfsbackendgphoto2.c: Revert the patch from #520123 that
	removed the ignore_prefix handling. Change ensure_ignore_prefix()
	to only use an ignore prefix if there is exactly one storage head.

	* monitor/gphoto2/ggphoto2volumemonitor.c: Nuke orphan mount
	handling since that is superseeded by shadow mounts. Also avoid
	appending the store name if there is only one storage head.

	* monitor/gphoto2/ggphoto2volume.[ch]: Rename foreign_mount_root
	to activation_root since that is really what it is now. Also
	fix a silly logical bug whereby music players (as reported by
	HAL) weren't detected.

2009-02-19  Benjamin Otte  <otte@gnome.org>

	* AUTHORS:
	* daemon/gvfsbackendftp.c:
	add Andreas as author of the ftp backend

2009-02-19  Benjamin Otte  <otte@gnome.org>

	reviewed by: Andreas Henriksson <andreas@fatal.se>
