@@ -1,3 +1,9 @@
+2009-02-26  Hans Petter Jansson  <hpj@novell.com>
+
+	* client/gvfsfusedaemon.c (vfs_ftruncate): Immediately close the stream
+	we get from g_file_replace(), so truncation becomes visible. Fixes
+	BRC #479199.
+
 2009-02-26  Alexander Larsson  <alexl@redhat.com>
 
 	* daemon/gvfsbackendsftp.c (try_make_symlink):
